Fix for BC break introduced in Sass 3.3.0rc3

--- a/_sass-import-once.scss
+++ b/_sass-import-once.scss
@@ -1,6 +1,6 @@
 $modules: () !default;
 @mixin exports($name) {
-  @if (index($modules, $name) == false) {
+  @if not index($modules, $name) {
     $modules: append($modules, $name) !global;
     @content;
   }
